# ClientServer

./: .gitignore
Client/: CMakeLists.txt  clientdialog.cpp  clientdialog.h  clientdialog.ui  clientstatus.cpp  clientstatus.h  clientstatus.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
Server/: CMakeLists.txt  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp
Server/tests/: CMakeLists.txt  server_ut.cpp
include/: argparser.hpp  server_helper.hpp
